----------------------------------------------------------------------
 OmegaT 3.0.7 update 1
----------------------------------------------------------------------
   2 Enhancements
   1 Bug fix
   1 Localisation update
----------------------------------------------------------------------
3.0.7 update 1 vs. 3.0.7

  Implemented requests:

  - Show XLIFF trans-unit note as a comment 
  https://sourceforge.net/p/omegat/feature-requests/803/

  Other enhancements:
  
  - New debugging information about team projects available in the logs
(if org.omegat.level=FINEST is set in logger.properties)

  Bug fixes:

  - Missing orion jar in lib folder
  https://sourceforge.net/p/omegat/bugs/639/

  Localisation updates:

  - Italian localisation updated to 3.0.7 (UI, documentation)

----------------------------------------------------------------------
 OmegaT 3.0.7 
----------------------------------------------------------------------
   7 Enhancements
   2 Bug fixes
   1 Localisation update
----------------------------------------------------------------------
3.0.7 vs. 3.0.6

  Implemented requests:

  - Keep relative addressing in *.project when possible
  https://sourceforge.net/p/omegat/feature-requests/734/

  - Validate tags: constrain to file
  https://sourceforge.net/p/omegat/feature-requests/669/

  - List number of files in project
  https://sourceforge.net/p/omegat/feature-requests/912/

  Other enhancements:
  
  - The auto-text file type is displayed in the file selector.

  - In the Editor, the tooltip is now the same as the title

  - There's a new report in Tools: Match Statistics per Files
It gives the same information as the match statistics for every file,
plus the total at the end, with the repetitions being split in two 
lines: 
"Repetitions within this file" lists repetitions for which the first 
occurence is in this file.
"Repetitions from other files" list repetitions for which the first 
occurence is in a previous file in the list.
